--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,4 +1,5 @@
 @import "./index/root.scss";
+@import "./index/common.scss";
 @import "./index/icon.scss";
 @import "./index/header.scss";
 @import "./index/content.scss";  
