--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,11 +7,10 @@
     </head>
 
     <body>
-
         <div class="all-wrapper">
-            
-            <div class="header">
-                <div class="logo-search">
+
+            <div class="header">    
+                <div class="header__logo-search">
                     <div class="logo">
                         <a href="/">
                             <img src="/images/logo_shw.png" />
@@ -27,26 +26,30 @@
                             autocomplete="off"
                             placeholder="검색어를 입력하세요"
                         />
-                        <button type="button">                            
-                            <span class="i-search"></span>         
+                        <button type="button">
+                            <span class="i-search"></span>
                         </button>
                     </div>
                 </div>
 
-                <div class="menu">
-                    <div class="menu__wrapper">
+                <div class="header__menu">
+                    <div class="header__menu__wrapper">
                         <div class="category">
-                            <button type="button">                                
+                            <button type="button">
                                 <span class="i-category"></span>
-                                <span>카테고리</span>                            
+                                <span>카테고리</span>
                             </button>
                         </div>
                         <span class="txt-bar"></span>
-                        
+
                         <ul class="list-hot">
                             <li><a href="#">핫딜</a></li>
                             <li><a href="#">베스트100</a></li>
-                            <li><a href="#">할인특가<span class="emphasis"></span></a></li>
+                            <li>
+                                <a href="#"
+                                    >할인특가<span class="emphasis"></span
+                                ></a>
+                            </li>
                             <li><a href="#">기획전</a></li>
                         </ul>
                         <span class="txt-bar"></span>
@@ -56,7 +59,11 @@
                             <li><a href="#">#제철음식</a></li>
                             <li><a href="#">#블루투스이어폰</a></li>
                             <li><a href="#">#커블체어</a></li>
-                            <li><a href="#">#노트북<span class="emphasis"></span></a></li>
+                            <li>
+                                <a href="#"
+                                    >#노트북<span class="emphasis"></span
+                                ></a>
+                            </li>
                         </ul>
 
                         <ul class="list-usergroup">
@@ -71,101 +78,189 @@
                                     <span class="i-recent"></span>
                                     <span>최근본 상품</span>
                                 </a>
-                               
                             </li>
                         </ul>
-
-                    </div>
+                    </div>   
                 </div>
             </div>
 
-            <div class="content">                    
-                <div class="event">                    
-                    <div class="event-one">
-                        <a href="/">
-                            <img src="" />
+            <div class="content">
+
+                <div class="content__event">                    
+                    <div class="content__event__one">
+                        <a href="/">  
+                            <img src="/images/car_best.png"/>                            
                         </a>
                     </div>
-                    
-                    <div class="event-carousel">
-                        <ul class="carousel">
-                            <li>1</li>
-                            <li>2</li>
-                            <li>3</li>
-                        </ul>
-                        <div class="carousel__paging">
-                            <span>_</span>
-                            <span>_</span>
-                            <span>_</span>
+
+                    <div class="content__event__carousel">
+                        
+                        <div class="carousel">                                                       
+                            <img src="/images/coffee_twig.png"/>  <!-- 임시, 추후 삭제 -->    
+                            <!-- 나중에 활성  -->
+                            <!-- width 초과하여야함
+                            <ul class="carousel__items">                                
+                                <li>1</li>
+                                <li>2</li>
+                                <li>3</li>
+                            </ul>
+                            -->
                         </div>
-                        <button>◁</button>
-                        <button>▷</button>   
-                    </div>
 
-                    <div class="event-more">
-                        <ul class="more">                            
-                            <li>
-                                <span class="img">
-                                    <img src=""/>
-                                </span>
-                                <span class="bold">
+                        <div class="carousel__paging">
+                            <span class="carousel__paging__inner">
+                                <span class="current"></span>
+                                <span></span>
+                                <span></span>                                
+                            </span>
+  
+                            <button class="carousel__paging--prev">
+                                <span class="i-slide__paging--prev"></span>
+                            </button>
+                            <button class="carousel__paging--next">
+                                <span class="i-slide__paging--next"></span>
+                            </button>
 
-                                </span>
-                                <span class="txt-info">
-
-                                </span>
-                                <span class="icon_theme">
-
-                                </span>
-                            </li>
-                            <li>2</li>
-                            <li>3</li>
-                            <li>4</li>
-                        </ul>
-                        <button type="button" class="more__btn">
-                            더보기(1/276건)
-                            <!-- 이버튼 누르면, ul(more) 안에서 아이템 ++  -->
-                        </button>
-                    </div>
-                                            
+                        </div>                        
+                    </div>                    
                 </div>
 
-                <div class="hot">
-                    <p>지금뜨는 테마 카테고리</p>
-                    
-                    <div class="hot-carousel">  
+                <div class="content__more">
+                    <div class="content__more__view">
+                        <ul>
+                            <li>
+                                <a href="/">
+                                    <img src="/images/itemsample.jfif" />
+                                    <div>
+                                        <span class="txt-bold">테스트</span>
+                                        <span class="txt-info">테스트</span>
+                                        <span class="i-theme"></span>
+                                    </div>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="/">
+                                    <img src="/images/itemsample.jfif" />
+                                    <div>
+                                        <span class="txt-bold">테스트2</span>
+                                        <span class="txt-info">테스트2</span>
+                                        <span class="i-theme"></span>
+                                    </div>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="/">
+                                    <img src="/images/itemsample.jfif" />
+                                    <div>
+                                        <span class="txt-bold">테스트3</span>
+                                        <span class="txt-info">테스트3</span>
+                                        <span class="i-theme"></span>
+                                    </div>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="/">
+                                    <img src="/images/itemsample.jfif" />
+                                    <div>
+                                        <span class="txt-bold">테스트4</span>
+                                        <span class="txt-info">테스트4</span>
+                                        <span class="i-theme"></span>
+                                    </div>
+                                </a>
+                            </li>
+                            <li class="noBorder">
+                                <a href="/">
+                                    <img src="/images/itemsample.jfif" />
+                                    <div>
+                                        <span class="txt-bold">테스트5</span>
+                                        <span class="txt-info">테스트5</span>
+                                        <span class="i-theme"></span>
+                                    </div>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="/">
+                                    <img src="/images/itemsample.jfif" />
+                                    <div>
+                                        <span class="txt-bold">테스트6</span>
+                                        <span class="txt-info">테스트6</span>
+                                        <span class="i-theme"></span>
+                                    </div>
+                                </a>
+                            </li>
+                        </ul>                        
+                    </div>
+
+                    <button type="button" class="content__more__btn">
+                        더보기(1/276건)
+                        <!-- 이버튼 누르면, ul(more) 안에서 아이템 ++  -->
+                    </button>
+                </div>
+
+                <div class="content__hot">                    
+                    <p class="content__hot__info">지금뜨는 테마 카테고리</p>
+
+                    <div class="content__hot__carousel">
                         <!-- 버튼 클릭당 2개의 아이템 이동, 보이는 최대 갯수 5개  -->
-                        <ul class="carousel">
+                        <ul>
                             <li>
-                                <span class="img">
-                                    <img src=""/>
-                                </span>
-                                <span class="bold">
-
-                                </span>
-                                <span class="txt-info">
-
-                                </span>
-                                <span class="icon_theme">
-
-                                </span>
+                                <a href="/">
+                                    <img src="/images/itemsample2.jfif" />
+                                    <div>
+                                        <span class="txt-bold">테스트2-1</span>
+                                        <span class="txt-info">테스트2-1</span>
+                                        <span class="i-theme"></span>
+                                    </div>
+                                </a>
                             </li>
-                            <li>2</li>
-                            <li>3</li>
-                            <li>4</li>
-                            <li>5</li>
-                            <li>6</li>
-                            <li>7</li>
-                            <li>8</li>
-                            <li>9</li>
-                            <li>10</li>
+                            <li>
+                                <a href="/">
+                                    <img src="/images/itemsample2.jfif" />
+                                    <div>
+                                        <span class="txt-bold">테스트2-2</span>
+                                        <span class="txt-info">테스트2-2</span>
+                                        <span class="i-theme"></span>
+                                    </div>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="/">
+                                    <img src="/images/itemsample2.jfif" />
+                                    <div>
+                                        <span class="txt-bold">테스트2-3</span>
+                                        <span class="txt-info">테스트2-3</span>
+                                        <span class="i-theme"></span>
+                                    </div>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="/">
+                                    <img src="/images/itemsample2.jfif" />
+                                    <div>
+                                        <span class="txt-bold">테스트2-4</span>
+                                        <span class="txt-info">테스트2-4</span>
+                                        <span class="i-theme"></span>
+                                    </div>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="/">
+                                    <img src="/images/itemsample2.jfif" />
+                                    <div>
+                                        <span class="txt-bold">테스트2-5</span>
+                                        <span class="txt-info">테스트2-5</span>
+                                        <span class="i-theme"></span>
+                                    </div>
+                                </a>
+                            </li>
+                            
                         </ul>
-                        <button>◁</button>
-                        <button>▷</button>                            
-                    </div>
+                        <!-- <button class="carousel__prevBtn">◁</button> -->
+                        <!-- <button class="carousel__nextBtn">▷</button> -->
+                    </div>                                        
                 </div>
+                
             </div>
-
         </div>
     </body>
 </html>
