--- a/shopping/views/main.ejs
+++ b/shopping/views/main.ejs
@@ -20,7 +20,7 @@
             <div class = nav_wrapper>
                 <div class = "category">
                     <button>
-                        <span class = icon_hamburger>icon</span>
+                        <span class = "icon_hamburger"></span>
                         카테고리
                     </button>
                 </div>
@@ -41,12 +41,14 @@
                 <ul class = "nav_user">
                     <li>
                         <a>
-                            <span class = "icon_human">icon</span>로그인
+                            <span class = "icon_human"></span>
+                            로그인
                         </a>
                     </li>
                     <li>
                         <a>
-                            <span class = "icon_layers">icon</span>최근본 상품
+                            <span class = "icon_layers"></span>
+                            최근본 상품
                         </a>
                     </li>
                 </ul>
