chore: Copy file to code-review folder for code review

--- a/code-review/w3-shopping/index.ejs
+++ b/code-review/w3-shopping/index.ejs
@@ -24,7 +24,7 @@
   <div class="navbar-wrapper">
     <div class="navbar">
       <div class="navbar__category">
-        <img src="" alt="icon-category">
+        <!-- <img src="" alt="icon-category"> -->
         카테고리
       </div>
       <div class="navbar__menu">
