[Update] slide - carousel
- carousel 시도중
    - 현재는 js에서 style에 바로 접근하고 있는데, class로 넣고 빼는 식으로 수정할 예정
    - 현재 슬라이드가 아닌 것들은 없어져야 하는데.. html 구조를 잘못 짠거같음

--- a/shopping/public/stylesheets/main/articleTop.scss
+++ b/shopping/public/stylesheets/main/articleTop.scss
@@ -19,11 +19,21 @@
 
     .event__item {
       grid-column: 1/3;
-      border-right: none;
     }
 
     .event__slide {
       grid-column: 3/6;
+
+      .slide_event {
+        background-color: tan;
+      }
+
+      .panel {
+        display: table;
+        float: left;
+        width: map-get($slide_img, width);
+        height: map-get($slide_img, height);
+      }
     }
 
     .paging_comm {
